--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
 body {
+  background-color: white;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+#root {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  grid-template-rows: auto;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  background-color: white;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.nav-item {
+  padding: 1rem;
+  text-decoration: none;
+  color: black;
+  list-style-type: none;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: black;
+}
+
+.nav-item a:hover {
+  text-decoration: none;
+  color: red;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  background-color: grey;
+}
+
+section {
+  padding-left: 5em;
+}
+
+#hero {
+  display: flex;
+  background-color: darkslategrey;
+  color: white;
+  padding: 2rem;
+}
+
+.content {
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+#specials {
+  background-color: white;
+  color: black;
+  padding: 2rem;
+}
+
+#specials-header {
+  display: flex;
+}
+
+#testimonials {
+  background-color: darkslategrey;
+  color: white;
+  padding: 2rem;
+}
+
+#about {
+  background-color: white;
+  color: black;
+  padding: 2rem;
+}
+
+footer {
+  background-color: darkslategrey;
+  color: white;
+  padding: 2rem;
+}
+
+footer .content {
+  display: flex;
+}
+
+#footer-image {
+  height: 200px;
+  clip-path: circle(100px at 100px 100px);
 }
